사용할 dropdown 텍스트 수정

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <div>
       <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
+        <button class="dropbtn">USD</button>
         <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
+          <a href="#">USD</a>
+          <a href="#">KRW</a>
+          <a href="#">VMD</a>
         </div>
       </div>
     </div>
