환전 금액 입력 영역 추가

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
+    <div class="exchange-box">
       <div class="dropdown">
         <button class="dropbtn">USD</button>
         <div class="dropdown-content">
@@ -15,6 +15,10 @@
           <a href="#">KRW</a>
           <a href="#">VMD</a>
         </div>
+      </div>
+      <div class="input-area">
+        <input type="number" name=" " id="" />
+        <div>달러</div>
       </div>
     </div>
 
