--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
       </div>
     </div>
 
+    <h1>=</h1>
+
+    <div class="exchange-box">
+      <div class="dropdown">
+        <button class="dropbtn">USD</button>
+        <div class="dropdown-content">
+          <a href="#">USD</a>
+          <a href="#">KRW</a>
+          <a href="#">VMD</a>
+        </div>
+      </div>
+      <div class="input-area">
+        <input type="number" name=" " id="" />
+        <div>달러</div>
+      </div>
+    </div>
+
     <script src="main.js" / >
   </body>
 </html>
