--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="dropdown-content">
           <a href="#">USD</a>
           <a href="#">KRW</a>
-          <a href="#">VMD</a>
+          <a href="#">VND</a>
         </div>
       </div>
       <div class="input-area">
