--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="exchange-box">
       <div class="dropdown">
-        <button class="dropbtn">USD</button>
-        <div class="dropdown-content">
+        <button class="dropbtn" id="from-button">USD</button>
+        <div class="dropdown-content" id="from-currency-list">
           <a href="#">USD</a>
           <a href="#">KRW</a>
           <a href="#">VMD</a>
@@ -26,8 +26,8 @@
 
     <div class="exchange-box">
       <div class="dropdown">
-        <button class="dropbtn">USD</button>
-        <div class="dropdown-content">
+        <button class="dropbtn" id="to-button">USD</button>
+        <div class="dropdown-content" id="to-currency-list">
           <a href="#">USD</a>
           <a href="#">KRW</a>
           <a href="#">VND</a>
