--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="dropdown-content" id="from-currency-list">
           <a href="#">USD</a>
           <a href="#">KRW</a>
-          <a href="#">VMD</a>
+          <a href="#">VND</a>
         </div>
       </div>
       <div class="input-area">
