--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="input-area">
-        <input type="number" name=" " id="" />
+        <input type="number" name=" " id="from-input" />
         <div>달러</div>
       </div>
     </div>
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="input-area">
-        <input type="number" name=" " id="" />
+        <input type="number" name=" " id="to-input " />
         <div>달러</div>
       </div>
     </div>
