function convert 추가

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="input-area">
-        <input type="number" name=" " id="from-input" />
+        <input type="number" name=" " id="from-input" onkeyup="convert()" />
         <div>달러</div>
       </div>
     </div>
